feat: add endpoints for bulk querying entries and dictionaries
