# src/api/mod.rs
@@ -34,16 +34,18 @@ pub fn make() -> Router<State> {
     Router::new()
         // protected
         .route("/dictionaries", post(Dictionary::create))
-        .route("/entries", post(Entry::create))
         .route("/dictionaries/{id}", delete(Dictionary::delete))
+        .route("/entries", post(Entry::create))
         .route("/entries/{id}", delete(Entry::delete))
-        .route("/logout", get(user::logout))
-        .route("/users/me", get(user::whoami))
+        .route("/logout", get(User::logout))
+        .route("/users/me", get(User::whoami))
         .route_layer(login_required!(State))
         // unprotected
+        .route("/dictionaries", get(Dictionary::get_all))
         .route("/dictionaries/{id}", get(Dictionary::get))
-        .route("/entries/{id}", get(Dictionary::get))
-        .route("/login", post(user::login))
+        .route("/entries", get(Entry::get_all))
+        .route("/entries/{id}", get(Entry::get))
+        .route("/login", post(User::login))
         .route("/users", post(User::create))
         .route("/users/{id}", get(User::get))
 }
